--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body class="background">
-    <img src="assets/OSKIYU.png" class="central_image"/>
+  <div class="colours-background"></div>
+  <img src="assets/OSKIYU.png" class="central_image"/>
+  <a href="./oskengine/index.html"><img class="card_link" src="./assets/bigcard.png"></a>
 
-    <a href="./oskengine/index.html"><img class="card_link" src="./assets/bigcard.png"></a>
 </body>
 </html>
