--- a/oskengine/index.html
+++ b/oskengine/index.html
@@ -5,11 +5,18 @@
   <title>OSKengine</title>
 
   <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="ostyle.css">
 </head>
 <body class="background">
+    <div class="colours-background"></div>
+
     <a href="../index.html"><img class="osk_link" src="../assets/OSKIYU.png"></a>
 
-    <img src="../assets/oskEngineProfBlanco.png" class="central_image"/>
+
+    <div class="bluebar__top"></div>
+    <div class="me">
+      <img src="../assets/card.png" class="central_image me__content"/>
+    </div>    
 
     <div class="link">
         <a href="https://github.com/oskiyu/OSKengine" class="link">Repositorio de OSKengine.</a>
